# xstock-options

./: .cursorrules  .gitignore  Anchor.toml  COMPARISON.md  DEMO.md  FINANCIAL_MODELING_AUDIT.md  GUIDE.md  HOW_IT_WORKS.md  LICENSE  MINT_GUIDE.md  QUICK_START.md  README.md  README.me  V2_README.md  instructions.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: .gitignore  README.md  fix_rls_policy.sql  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
app/anchor/: idl.json  setup.ts  vault_idl.json  xstock_idl.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: AppWalletProvider.tsx  ComingSoonPage.tsx  Dashboard.tsx  DemoPanel.tsx  FeaturedMarket.tsx  Hero.tsx  LiveTicker.tsx  (+8 more)
assets/: nvidiax_test.json  usdc_test.json
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
programs/xstock_options/: Cargo.toml
programs/xstock_options/src/: lib.rs
scripts/: add_metadata.ts  advance-epoch.ts  airdrop-vault-tokens.ts  calc_discriminator.ts  calculate_sighash.ts  check-demo-status.ts  check_balance.ts  check_decimals.ts  check_discriminator.ts  check_mint.ts  convert-phantom-key.ts  create_mints.ts  create_xstock_account.ts  debug_account.ts  demo-epoch.ts  fund-keeper-usdc.ts  init-vault.ts  init_mints.ts  list_all_contracts.ts  mint.ts  mint_to_user.ts  mint_usdc.ts  mint_usdc_auto.ts  mock-market-maker.ts  oracle.ts  repair-bump.ts  run-demo.sh  setup-demo-vault.ts  test-oracle.ts  update-token-metadata.ts
tests/: oracle.ts  rfq.ts  temp_anchor.js  vault.ts  xstock.ts
theme_guide/: vaultThemes.generated.json  vaultThemes.ts
(+63 files in other folders)
